load('@build_bazel_rules_ios//rules:framework.bzl', 'apple_framework')
# Add a config setting release for compilation mode
# Assume that people are using `opt` for release mode
# see the bazel user manual for more information
# https://docs.bazel.build/versions/master/be/general.html#config_setting
config_setting(
  name = "release",
  values = {
    "compilation_mode": "opt"
  }
)
config_setting(
  name = "osxCase",
  values = {
    "apple_platform_type": "macos"
  }
)
config_setting(
  name = "tvosCase",
  values = {
    "apple_platform_type": "tvos"
  }
)
config_setting(
  name = "watchosCase",
  values = {
    "apple_platform_type": "watchos"
  }
)
config_setting(
  name = "ios_armv7",
  values = {
    "cpu": "ios_armv7"
  }
)
config_setting(
  name = "ios_arm64",
  values = {
    "cpu": "ios_arm64"
  }
)
config_setting(
  name = "ios_arm64e",
  values = {
    "cpu": "ios_arm64e"
  }
)
config_setting(
  name = "ios_sim_arm64",
  values = {
    "cpu": "ios_sim_arm64"
  }
)
config_setting(
  name = "ios_i386",
  values = {
    "cpu": "ios_i386"
  }
)
config_setting(
  name = "ios_x86_64",
  values = {
    "cpu": "ios_x86_64"
  }
)
apple_framework(
  name = "BidstackMobileAdsSDK",
  module_name = "BidstackMobileAdsSDK",
  bundle_id = "org.cocoapods.BidstackMobileAdsSDK",
  swift_version = "5",
  link_dynamic = False,
  testonly = False,
  platforms = {
    "ios": "11.0"
  },
  vendored_xcframeworks = [
    {
    "name": "BidstackMobileAdsSDK",
    "slices": [
      {
      "build_type": {
        "linkage": "dynamic",
        "packaging": "framework"
      },
      "identifier": "ios-arm64",
      "path": "BidstackMobileAdsSDK.xcframework/ios-arm64/BidstackMobileAdsSDK.framework",
      "platform": "ios",
      "platform_variant": [],
      "supported_archs": [
        "arm64"
      ]
    },
      {
      "build_type": {
        "linkage": "dynamic",
        "packaging": "framework"
      },
      "identifier": "ios-arm64_x86_64-simulator",
      "path": "BidstackMobileAdsSDK.xcframework/ios-arm64_x86_64-simulator/BidstackMobileAdsSDK.framework",
      "platform": "ios",
      "platform_variant": "simulator",
      "supported_archs": [
        "sim_arm64",
        "x86_64"
      ]
    }
    ]
  },
    {
    "name": "OMSDK_Bidstack",
    "slices": [
      {
      "build_type": {
        "linkage": "dynamic",
        "packaging": "framework"
      },
      "identifier": "ios-arm64_armv7",
      "path": "Frameworks/OMSDK_Bidstack.xcframework/ios-arm64_armv7/OMSDK_Bidstack.framework",
      "platform": "ios",
      "platform_variant": [],
      "supported_archs": [
        "arm64",
        "armv7"
      ]
    },
      {
      "build_type": {
        "linkage": "dynamic",
        "packaging": "framework"
      },
      "identifier": "ios-arm64_i386_x86_64-simulator",
      "path": "Frameworks/OMSDK_Bidstack.xcframework/ios-arm64_i386_x86_64-simulator/OMSDK_Bidstack.framework",
      "platform": "ios",
      "platform_variant": "simulator",
      "supported_archs": [
        "sim_arm64",
        "i386",
        "x86_64"
      ]
    }
    ]
  }
  ],
  objc_defines = [
    "COCOAPODS=1"
  ] + select(
    {
      "//conditions:default": [
        "POD_CONFIGURATION_DEBUG=1",
        "DEBUG=1"
      ],
      ":release": [
        "POD_CONFIGURATION_RELEASE=1"
      ]
    }
  ),
  swift_defines = [
    "COCOAPODS"
  ] + select(
    {
      "//conditions:default": [
        "DEBUG"
      ]
    }
  ),
  visibility = [
    "//visibility:public"
  ]
)