load('@build_bazel_rules_apple//apple:apple.bzl', 'apple_dynamic_xcframework_import')
load('@build_bazel_rules_ios//rules:framework.bzl', 'apple_framework')
# Add a config setting release for compilation mode
# Assume that people are using `opt` for release mode
# see the bazel user manual for more information
# https://docs.bazel.build/versions/master/be/general.html#config_setting
config_setting(
  name = "release",
  values = {
    "compilation_mode": "opt"
  }
)
config_setting(
  name = "ios_arm64",
  values = {
    "cpu": "ios_arm64"
  }
)
config_setting(
  name = "ios_armv7",
  values = {
    "cpu": "ios_armv7"
  }
)
config_setting(
  name = "ios_i386",
  values = {
    "cpu": "ios_i386"
  }
)
config_setting(
  name = "ios_sim_arm64",
  values = {
    "cpu": "ios_sim_arm64"
  }
)
config_setting(
  name = "ios_x86_64",
  values = {
    "cpu": "ios_x86_64"
  }
)
apple_framework(
  name = "BidstackMobileAdsSDK",
  module_name = "BidstackMobileAdsSDK",
  bundle_id = "org.cocoapods.BidstackMobileAdsSDK",
  swift_version = "5",
  link_dynamic = False,
  testonly = False,
  platforms = {
    "ios": "11.0"
  },
  deps = select(
    {
      "//conditions:default": [],
      ":ios_arm64": [
        ":BidstackMobileAdsSDK_BidstackMobileAdsSDK_VendoredXCFramework",
        ":BidstackMobileAdsSDK_OMSDK_Bidstack_VendoredXCFramework"
      ],
      ":ios_armv7": [
        ":BidstackMobileAdsSDK_OMSDK_Bidstack_VendoredXCFramework"
      ],
      ":ios_i386": [
        ":BidstackMobileAdsSDK_OMSDK_Bidstack_VendoredXCFramework"
      ],
      ":ios_sim_arm64": [
        ":BidstackMobileAdsSDK_BidstackMobileAdsSDK_VendoredXCFramework",
        ":BidstackMobileAdsSDK_OMSDK_Bidstack_VendoredXCFramework"
      ],
      ":ios_x86_64": [
        ":BidstackMobileAdsSDK_BidstackMobileAdsSDK_VendoredXCFramework",
        ":BidstackMobileAdsSDK_OMSDK_Bidstack_VendoredXCFramework"
      ]
    }
  ),
  objc_defines = [
    "COCOAPODS=1"
  ] + select(
    {
      "//conditions:default": [
        "POD_CONFIGURATION_DEBUG=1",
        "DEBUG=1"
      ],
      ":release": [
        "POD_CONFIGURATION_RELEASE=1"
      ]
    }
  ),
  swift_defines = [
    "COCOAPODS"
  ] + select(
    {
      "//conditions:default": [
        "DEBUG"
      ]
    }
  ),
  visibility = [
    "//visibility:public"
  ]
)
apple_dynamic_xcframework_import(
  name = "BidstackMobileAdsSDK_BidstackMobileAdsSDK_VendoredXCFramework",
  xcframework_imports = glob(
    [
      "BidstackMobileAdsSDK.xcframework/**"
    ]
  ),
  visibility = [
    "//visibility:public"
  ]
)
apple_dynamic_xcframework_import(
  name = "BidstackMobileAdsSDK_OMSDK_Bidstack_VendoredXCFramework",
  xcframework_imports = glob(
    [
      "Frameworks/OMSDK_Bidstack.xcframework/**"
    ]
  ),
  visibility = [
    "//visibility:public"
  ]
)