load('@build_bazel_rules_ios//rules:framework.bzl', 'apple_framework')
# Add a config setting release for compilation mode
# Assume that people are using `opt` for release mode
# see the bazel user manual for more information
# https://docs.bazel.build/versions/master/be/general.html#config_setting
config_setting(
  name = "release",
  values = {
    "compilation_mode": "opt"
  }
)
apple_framework(
  name = "ChatLayout",
  module_name = "ChatLayout",
  bundle_id = "org.cocoapods.ChatLayout",
  swift_version = "5",
  link_dynamic = True,
  testonly = False,
  infoplists = [
    ":ChatLayout_InfoPlist"
  ],
  platforms = {
    "ios": "12.0"
  },
  srcs = glob(
    [
      "ChatLayout/Classes/Core/**/*.S",
      "ChatLayout/Classes/Core/**/*.c",
      "ChatLayout/Classes/Core/**/*.cc",
      "ChatLayout/Classes/Core/**/*.cpp",
      "ChatLayout/Classes/Core/**/*.cxx",
      "ChatLayout/Classes/Core/**/*.h",
      "ChatLayout/Classes/Core/**/*.hpp",
      "ChatLayout/Classes/Core/**/*.hxx",
      "ChatLayout/Classes/Core/**/*.m",
      "ChatLayout/Classes/Core/**/*.mm",
      "ChatLayout/Classes/Core/**/*.s",
      "ChatLayout/Classes/Core/**/*.swift",
      "ChatLayout/Classes/Extras/**/*.S",
      "ChatLayout/Classes/Extras/**/*.c",
      "ChatLayout/Classes/Extras/**/*.cc",
      "ChatLayout/Classes/Extras/**/*.cpp",
      "ChatLayout/Classes/Extras/**/*.cxx",
      "ChatLayout/Classes/Extras/**/*.h",
      "ChatLayout/Classes/Extras/**/*.hpp",
      "ChatLayout/Classes/Extras/**/*.hxx",
      "ChatLayout/Classes/Extras/**/*.m",
      "ChatLayout/Classes/Extras/**/*.mm",
      "ChatLayout/Classes/Extras/**/*.s",
      "ChatLayout/Classes/Extras/**/*.swift"
    ]
  ),
  objc_defines = [
    "COCOAPODS=1"
  ] + select(
    {
      "//conditions:default": [
        "POD_CONFIGURATION_DEBUG=1",
        "DEBUG=1"
      ],
      ":release": [
        "POD_CONFIGURATION_RELEASE=1"
      ]
    }
  ),
  swift_defines = [
    "COCOAPODS"
  ] + select(
    {
      "//conditions:default": [
        "DEBUG"
      ]
    }
  ),
  sdk_frameworks = [
    "UIKit"
  ],
  visibility = [
    "//visibility:public"
  ]
)
genrule(
  name = "ChatLayout_InfoPlist",
  srcs = [],
  outs = [
    "ChatLayout_InfoPlist.plist"
  ],
  cmd = """cat <<EOF > $@
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
	<key>CFBundleIdentifier</key>
	<string>org.cocoapods.ChatLayout</string>
	<key>CFBundleInfoDictionaryVersion</key>
	<string>6.0</string>
	<key>CFBundleName</key>
	<string>ChatLayout</string>
	<key>CFBundlePackageType</key>
	<string>FMWK</string>
	<key>CFBundleShortVersionString</key>
	<string>2.0.3</string>
	<key>CFBundleSignature</key>
	<string>????</string>
	<key>CFBundleSupportedPlatforms</key>
	<array>
		<string>iPhoneSimulator</string>
		<string>iPhoneOS</string>
	</array>
	<key>CFBundleVersion</key>
	<string>1</string>
	<key>MinimumOSVersion</key>
	<string>12.0</string>
	<key>UIDeviceFamily</key>
	<array>
		<integer>1</integer>
		<integer>2</integer>
	</array>
</dict>
</plist>

EOF"""
)