load('@build_bazel_rules_apple//apple:apple.bzl', 'apple_dynamic_xcframework_import')
load('@build_bazel_rules_ios//rules:framework.bzl', 'apple_framework')
# Add a config setting release for compilation mode
# Assume that people are using `opt` for release mode
# see the bazel user manual for more information
# https://docs.bazel.build/versions/master/be/general.html#config_setting
config_setting(
  name = "release",
  values = {
    "compilation_mode": "opt"
  }
)
config_setting(
  name = "ios_arm64",
  values = {
    "cpu": "ios_arm64"
  }
)
config_setting(
  name = "ios_sim_arm64",
  values = {
    "cpu": "ios_sim_arm64"
  }
)
config_setting(
  name = "ios_x86_64",
  values = {
    "cpu": "ios_x86_64"
  }
)
apple_framework(
  name = "Cheetah-iOS",
  module_name = "Cheetah",
  bundle_id = "org.cocoapods.Cheetah-iOS",
  swift_version = "5",
  link_dynamic = True,
  testonly = False,
  infoplists = [
    ":Cheetah-iOS_InfoPlist"
  ],
  platforms = {
    "ios": "13.0"
  },
  srcs = glob(
    [
      "binding/ios/*.swift"
    ]
  ),
  deps = select(
    {
      "//conditions:default": [],
      ":ios_arm64": [
        ":Cheetah_PvCheetah_VendoredXCFramework"
      ],
      ":ios_sim_arm64": [
        ":Cheetah_PvCheetah_VendoredXCFramework"
      ],
      ":ios_x86_64": [
        ":Cheetah_PvCheetah_VendoredXCFramework"
      ]
    }
  ),
  objc_defines = [
    "COCOAPODS=1"
  ] + select(
    {
      "//conditions:default": [
        "POD_CONFIGURATION_DEBUG=1",
        "DEBUG=1"
      ],
      ":release": [
        "POD_CONFIGURATION_RELEASE=1"
      ]
    }
  ),
  swift_defines = [
    "COCOAPODS"
  ] + select(
    {
      "//conditions:default": [
        "DEBUG"
      ]
    }
  ),
  visibility = [
    "//visibility:public"
  ]
)
apple_dynamic_xcframework_import(
  name = "Cheetah_PvCheetah_VendoredXCFramework",
  xcframework_imports = glob(
    [
      "lib/ios/PvCheetah.xcframework/**"
    ]
  ),
  visibility = [
    "//visibility:public"
  ]
)
genrule(
  name = "Cheetah-iOS_InfoPlist",
  srcs = [],
  outs = [
    "Cheetah-iOS_InfoPlist.plist"
  ],
  cmd = """cat <<EOF > $@
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
	<key>CFBundleIdentifier</key>
	<string>org.cocoapods.Cheetah-iOS</string>
	<key>CFBundleInfoDictionaryVersion</key>
	<string>6.0</string>
	<key>CFBundleName</key>
	<string>Cheetah-iOS</string>
	<key>CFBundlePackageType</key>
	<string>FMWK</string>
	<key>CFBundleShortVersionString</key>
	<string>2.0.0</string>
	<key>CFBundleSignature</key>
	<string>????</string>
	<key>CFBundleSupportedPlatforms</key>
	<array>
		<string>iPhoneSimulator</string>
		<string>iPhoneOS</string>
	</array>
	<key>CFBundleVersion</key>
	<string>1</string>
	<key>MinimumOSVersion</key>
	<string>13.0</string>
	<key>UIDeviceFamily</key>
	<array>
		<integer>1</integer>
		<integer>2</integer>
	</array>
</dict>
</plist>

EOF"""
)