load('@build_bazel_rules_ios//rules:framework.bzl', 'apple_framework')
load('@build_bazel_rules_ios//rules:precompiled_apple_resource_bundle.bzl', 'precompiled_apple_resource_bundle')
# Add a config setting release for compilation mode
# Assume that people are using `opt` for release mode
# see the bazel user manual for more information
# https://docs.bazel.build/versions/master/be/general.html#config_setting
config_setting(
  name = "release",
  values = {
    "compilation_mode": "opt"
  }
)
config_setting(
  name = "osxCase",
  values = {
    "apple_platform_type": "macos"
  }
)
config_setting(
  name = "tvosCase",
  values = {
    "apple_platform_type": "tvos"
  }
)
config_setting(
  name = "watchosCase",
  values = {
    "apple_platform_type": "watchos"
  }
)
config_setting(
  name = "ios_armv7",
  values = {
    "cpu": "ios_armv7"
  }
)
config_setting(
  name = "ios_arm64",
  values = {
    "cpu": "ios_arm64"
  }
)
config_setting(
  name = "ios_arm64e",
  values = {
    "cpu": "ios_arm64e"
  }
)
config_setting(
  name = "ios_sim_arm64",
  values = {
    "cpu": "ios_sim_arm64"
  }
)
config_setting(
  name = "ios_i386",
  values = {
    "cpu": "ios_i386"
  }
)
config_setting(
  name = "ios_x86_64",
  values = {
    "cpu": "ios_x86_64"
  }
)
genrule(
  name = "CoconutKit_InfoPlist",
  srcs = [],
  outs = [
    "CoconutKit_InfoPlist.plist"
  ],
  cmd = """cat <<EOF > $@
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
	<key>CFBundleIdentifier</key>
	<string>org.cocoapods.CoconutKit</string>
	<key>CFBundleInfoDictionaryVersion</key>
	<string>6.0</string>
	<key>CFBundleName</key>
	<string>CoconutKit</string>
	<key>CFBundlePackageType</key>
	<string>FMWK</string>
	<key>CFBundleShortVersionString</key>
	<string>3.2.3</string>
	<key>CFBundleSignature</key>
	<string>????</string>
	<key>CFBundleSupportedPlatforms</key>
	<array>
		<string>iPhoneSimulator</string>
		<string>iPhoneOS</string>
	</array>
	<key>CFBundleVersion</key>
	<string>1</string>
	<key>MinimumOSVersion</key>
	<string>7.0</string>
	<key>UIDeviceFamily</key>
	<array>
		<integer>1</integer>
		<integer>2</integer>
	</array>
</dict>
</plist>

EOF"""
)
apple_framework(
  name = "CoconutKit",
  module_name = "CoconutKit",
  bundle_id = "org.cocoapods.CoconutKit",
  link_dynamic = True,
  infoplists = [
    ":CoconutKit_InfoPlist"
  ],
  platforms = {
    "ios": "7.0"
  },
  srcs = glob(
    [
      "CoconutKit/Sources/**/*.h",
      "CoconutKit/Sources/**/*.m",
      "CoconutKit/Sources/Externals/MAZeroingWeakRef-75695a81/*.h",
      "CoconutKit/Sources/Externals/MAZeroingWeakRef-75695a81/*.m",
      "Tools/Scripts/PublicHeaders/*.h"
    ]
  ),
  public_headers = glob(
    [
      "Tools/Scripts/PublicHeaders/*.h"
    ]
  ),
  deps = [
    ":CoconutKit_CoconutKit-resources_Bundle"
  ],
  objc_defines = [
    "COCOAPODS=1"
  ] + select(
    {
      "//conditions:default": [
        "POD_CONFIGURATION_DEBUG=1",
        "DEBUG=1"
      ],
      ":release": [
        "POD_CONFIGURATION_RELEASE=1"
      ]
    }
  ),
  swift_defines = [
    "COCOAPODS"
  ] + select(
    {
      "//conditions:default": [
        "DEBUG"
      ]
    }
  ),
  sdk_frameworks = [
    "CoreData",
    "CoreGraphics",
    "CoreText",
    "Foundation",
    "MessageUI",
    "MobileCoreServices",
    "QuartzCore",
    "QuickLook",
    "UIKit",
    "WebKit"
  ],
  visibility = [
    "//visibility:public"
  ]
)
precompiled_apple_resource_bundle(
  name = "CoconutKit_CoconutKit-resources_Bundle",
  bundle_id = "org.cocoapods.CoconutKit-resources",
  bundle_name = "CoconutKit-resources",
  infoplists = [
    ":CoconutKit_CoconutKit-resources_Bundle_InfoPlist"
  ],
  resources = glob(
    [
      "CoconutKit-resources/*.lproj",
      "CoconutKit-resources/HTML/**",
      "CoconutKit-resources/Images/**",
      "CoconutKit-resources/Nibs/**"
    ]
  )
)
genrule(
  name = "CoconutKit_CoconutKit-resources_Bundle_InfoPlist",
  srcs = [],
  outs = [
    "CoconutKit_CoconutKit-resources_Bundle_InfoPlist.plist"
  ],
  cmd = """cat <<EOF > $@
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
	<key>CFBundleIdentifier</key>
	<string>org.cocoapods.CoconutKit-resources</string>
	<key>CFBundleInfoDictionaryVersion</key>
	<string>6.0</string>
	<key>CFBundleName</key>
	<string>CoconutKit-resources</string>
	<key>CFBundlePackageType</key>
	<string>BNDL</string>
	<key>CFBundleShortVersionString</key>
	<string>3.2.3</string>
	<key>CFBundleSignature</key>
	<string>????</string>
	<key>CFBundleSupportedPlatforms</key>
	<array>
		<string>iPhoneSimulator</string>
		<string>iPhoneOS</string>
	</array>
	<key>CFBundleVersion</key>
	<string>1</string>
	<key>MinimumOSVersion</key>
	<string>7.0</string>
	<key>UIDeviceFamily</key>
	<array>
		<integer>1</integer>
		<integer>2</integer>
	</array>
</dict>
</plist>

EOF"""
)