load('@build_bazel_rules_ios//rules:framework.bzl', 'apple_framework')
# Add a config setting release for compilation mode
# Assume that people are using `opt` for release mode
# see the bazel user manual for more information
# https://docs.bazel.build/versions/master/be/general.html#config_setting
config_setting(
  name = "release",
  values = {
    "compilation_mode": "opt"
  }
)
apple_framework(
  name = "Connectivity",
  module_name = "Connectivity",
  bundle_id = "org.cocoapods.Connectivity",
  swift_version = "5",
  link_dynamic = True,
  testonly = False,
  infoplists = [
    ":Connectivity_InfoPlist"
  ],
  platforms = {
    "ios": "11.0"
  },
  srcs = glob(
    [
      "Connectivity/Classes/**/*.S",
      "Connectivity/Classes/**/*.c",
      "Connectivity/Classes/**/*.cc",
      "Connectivity/Classes/**/*.cpp",
      "Connectivity/Classes/**/*.cxx",
      "Connectivity/Classes/**/*.h",
      "Connectivity/Classes/**/*.hpp",
      "Connectivity/Classes/**/*.hxx",
      "Connectivity/Classes/**/*.m",
      "Connectivity/Classes/**/*.mm",
      "Connectivity/Classes/**/*.s",
      "Connectivity/Classes/**/*.swift"
    ]
  ),
  objc_defines = [
    "COCOAPODS=1"
  ] + select(
    {
      "//conditions:default": [
        "POD_CONFIGURATION_DEBUG=1",
        "DEBUG=1"
      ],
      ":release": [
        "POD_CONFIGURATION_RELEASE=1"
      ]
    }
  ),
  swift_defines = [
    "COCOAPODS"
  ] + select(
    {
      "//conditions:default": [
        "DEBUG"
      ]
    }
  ),
  sdk_frameworks = [
    "SystemConfiguration"
  ],
  weak_sdk_frameworks = [
    "Combine",
    "Network"
  ],
  visibility = [
    "//visibility:public"
  ]
)
genrule(
  name = "Connectivity_InfoPlist",
  srcs = [],
  outs = [
    "Connectivity_InfoPlist.plist"
  ],
  cmd = """cat <<EOF > $@
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
	<key>CFBundleIdentifier</key>
	<string>org.cocoapods.Connectivity</string>
	<key>CFBundleInfoDictionaryVersion</key>
	<string>6.0</string>
	<key>CFBundleName</key>
	<string>Connectivity</string>
	<key>CFBundlePackageType</key>
	<string>FMWK</string>
	<key>CFBundleShortVersionString</key>
	<string>6.1.1</string>
	<key>CFBundleSignature</key>
	<string>????</string>
	<key>CFBundleSupportedPlatforms</key>
	<array>
		<string>iPhoneSimulator</string>
		<string>iPhoneOS</string>
	</array>
	<key>CFBundleVersion</key>
	<string>1</string>
	<key>MinimumOSVersion</key>
	<string>11.0</string>
	<key>UIDeviceFamily</key>
	<array>
		<integer>1</integer>
		<integer>2</integer>
	</array>
</dict>
</plist>

EOF"""
)